kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homework
  name: nginx-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  # ingressClassName: nginx
  rules:
    - host: "homework.otus"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8000
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8000
